[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["rob-mur <rmurphyswimmer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
jupyter = "^1.0.0"
ipykernel = "^6.15.2"
jupyterlab = "^3.4.6"
xlwings = "^0.27.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
